--- a/index.html
+++ b/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-    <title>portfolio</title>
-  </head>
-  <body class="bg-black">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" href="logo.png" type="image/x-icon" />
+		<link
+			href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+			rel="stylesheet"
+		/>
+		<meta
+			name="application-name"
+			content="Mathieu gayvallet - portfolio"
+			lang="en"
+		/>
+		<meta
+			name="application-name"
+			content="Mathieu gayvallet - portfolio"
+			lang="fr"
+		/>
+		<meta name="keywors" content="mathieu,gayvallet,portfolio,dev" />
+		<meta
+			name="description"
+			content="Mathieu Gayvallet's portfolio – web and mobile developer. Explore my React, Tailwind CSS, and JavaScript projects, view my technical skills, and get in touch to collaborate on modern, responsive interfaces."
+			lang="en"
+		/>
+		<meta
+			name="description"
+			content="Mathieu Gayvallet's portfolio – web and mobile developer. Explore my React, Tailwind CSS, and JavaScript projects, view my technical skills, and get in touch to collaborate on modern, responsive interfaces."
+			lang="fr"
+		/>
+		<title>portfolio</title>
+	</head>
+	<body class="bg-black">
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
+		<script type="module" src="/src/index.jsx"></script>
+	</body>
 </html>
